--- a/maze.html
+++ b/maze.html
@@ -8,8 +8,9 @@
 	<head>
 		<title>Maze!</title>
 		
-		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+		<!-- css and jQuery -->
+		<link href="maze.css" type="text/css" rel="stylesheet" />
+		<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
 		
 		<!-- maze js code -->
 		<script src="maze.js" type="text/javascript"></script>
